
﻿IMPROVEMENTS / FIXES
- General:
	- Fix false positives of Krakensbane being active on vessel switches.
	- Add Gun Game game option to the Mutator GameMode - craft progress through a list of mutators (weapon changes or otherwise) every time they score a kill. Ideally used with Continuous Spawn.
- AI / WM:
	- Clamp the vertical adjustment of the fly-to position to at most half the distance to the target (should fix the issue of being unable to attack targets directly below).
	- Add a slider for biasing the Immelmann pitch direction when not close to terrain/min altitude.
	- Add a slider for the initial roll-relevance and preserve the best roll-relevance between auto-tuning runs.
- Competition:
	- Add "Parts lost to asteroids" to the continuous spawn tournament score logs and parser.
	- Fix world switching for auto-resuming continuous spawn tournaments.
- Weapons:
﻿	- Reduce ECPerShot cost of electrolasers.
	- Heatrays now check for part occlusion.
	- Fix non-damaging lasers (gravity guns, etc) from not scoring in competition.
- RWP:
	- Add RWP override settings (in RWP_settings.cfg) for automatically enabling/disabling RWP options when the RWP toggle is toggled or the RWP slider is adjusted.
		- Settings adjusted when RWP is enabled aren't saved, but can be manually added to the RWP_settings.cfg file.
		- Settings adjusted when RWP is disabled are saved to settings.cfg as usual and serve as the base that the RWP settings override.
		- Overrides for round 0 are global overrides and are applied first before round specific overrides are applied.
		- Toggling the RWP toggle or moving the slider first reverts settings to the non-RWP values, then applies the global and round-specific RWP overrides.
		- For convenience, a few settings are excluded from being reverted: settings section toggles and spawn settings. Also, inf fuel / inf EC currently aren't affected.